syntax = "proto3";

package testapis.basic.presence;

message Message {
  string required_string_value = 1;
  optional string optional_string_value = 2;
  optional NestedMessage optional_nested_message = 3;
}

message NestedMessage {
  string body = 1;
}
